--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">StoreFrontAR</string>
+    <string name="app_name">Storefront.</string>
+    <string name="address_field">Enter your address to get started!</string>
+    <string name="button_search">Search</string>
 </resources>
