--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Storefront.</string>
     <string name="address_field">Enter your address to get started!</string>
     <string name="button_search">search</string>
+    <string name="featured">View it in AR!</string>
+    <string name="button_ar">View in AR</string>
+    <string name="featured_product">Featured Product</string>
 </resources>
