Added AR Reset and Return button. Moved Coord Search to MainActivity. Added using location device search. Added Web. Maps and Phone event on click on product view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="featured">View it in AR!</string>
     <string name="button_ar">View in AR</string>
     <string name="featured_product">Featured Product</string>
+    <string name="goBack">Return</string>
+    <string name="reset">Reset</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+
+    <string name="placesKey">AIzaSyCNn3rbBz-ERQp_rH4QkCou4E5wYLl7XV0</string>
 </resources>
